# Chains

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
chains/: __init__.py  cli.py  config.py
chains.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
chains/api/: routes.py  server.py
chains/attribution/: __init__.py  engine.py
chains/conditions/: __init__.py  detector.py
chains/discovery/: __init__.py  causal.py
chains/fixes/: __init__.py  suggester.py
chains/instrumentation/: __init__.py  logger.py
chains/llm/: __init__.py  adapter.py
chains/visualization/: __init__.py  flow.py
tests/: conftest.py  test_api.py  test_attribution.py  test_cli.py  test_conditions.py  test_discovery.py  test_instrumentation.py
tests/fixtures/: synthetic_traces.py
