[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chains"
version = "0.1.0"
description = "Debug multi-step LLM pipelines causally. Pinpoint which steps cause failures."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chains Contributors" }]

keywords = ["llm-debugging", "causal-attribution", "pipeline-observability", "rag", "prompt-chains"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.11,<1.14",
    "pandas>=2.1",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",

    "litellm>=1.30.0",
    "ollama>=0.2.0",

    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    "pyvis>=0.3",

    "fastapi>=0.100",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
    "httpx>=0.25",
]

[project.scripts]
chains = "chains.cli:app"

[tool.setuptools.packages.find]
include = ["chains*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
collect_ignore = ["chains"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
